[package]
name = "polygon_io_crypto_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"]}
dotenv = "0.15"
url = "2.3.1"
