[package]
name = "polygon_io_crypto_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.86"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full"]}
dotenv = "0.15"
url = "2.3.1"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"


