[package]
name = "polygon_io_crypto_playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "polygonio_rs"
path = "src/lib.rs"

[[bin]]
name = "polygon_io_crypto_playground"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.86"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full"]}
dotenv = "0.15"
url = "2.3.1"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
crossbeam = "0.8.2"
actix-web = "4.2.1"
actix-rt = "2.7.0"


